erDiagram
    USER ||--o{ USER_IMAGE : "owns"
    USER ||--o| BULK_PROMPT : "has"
    USER_IMAGE {
        string Id PK
        string UserId FK
        string Kind "Original|Regeneration|Meme|BulkVariation"
    }
    BULK_PROMPT {
        string RowKey PK
        string PromptText "JSON[10]"
    }
